<resources>
    <string name="app_name">podo</string>
    <string name="WELCOME"> Welcome to Podo</string>
    <string name="EMAIL"> Email</string>
    <string name="PASSWORD"> Password</string>
    <string name="PASSWORD_SIX_CHARACTERS_LONG">Should be at least 6 characters</string>
    <string name="WRONG_EMAIL"> Wrong email!!</string>
    <string name="WRONG_PASS"> Wrong password!!</string>
    <string name="EMAIL_EXIST">This email already exists</string>
    <string name="FORGOT_PASS"> Forgot Password?</string>
    <string name="INPUT_EMAIL">Input your email</string>
    <string name="CHECK_YOUR_EMAIL">Please check your email</string>
    <string name="SIGNIN"> Sign In</string>
    <string name="SIGNIN_WITH"> or sign in with</string>
    <string name="FACEBOOK"> Facebook</string>
    <string name="GOOGLE"> Google</string>
    <string name="WECHAT"> Wechat</string>
    <string name="DONT_HAVE_ACCOUNT"> Don\'t have an account?</string>
    <string name="SIGNUP"> Sign up</string>
    <string name="NAME">Name</string>
    <string name="TELL_US_YOUR_OPINION">Please tell us your opinion</string>
    <string name="CONFIRM_PASS">Confirm Password</string>
    <string name="ALREADY_HAVE_ACCOUNT"> Already have an account?</string>
    <string name="GOOGLE_FAILED">Google sign in failed</string>
    <string name="FACEBOOK_FAILED">Facebook sign in failed</string>
    <string name="SIGNUP_SUCCEED">Sign up succeeded</string>
    <string name="SIGNUP_FAILED">Sign up failed</string>
    <string name="SIGNIN_SUCCEED">Sign in succeeded</string>
    <string name="SIGNIN_FAILED">Sign in failed</string>
    <string name="ENGLISH">English</string>
    <string name="THAI">Thai</string>
    <string name="JAPANESE">Japanese</string>
    <string name="CHINESE">Chinese</string>
    <string name="KOREAN">Korean</string>
    <string name="LESSON">Lesson</string>
    <string name="READING">Reading</string>
    <string name="WRITING">Writing</string>
    <string name="COLLECTION">Collection</string>
    <string name="PROFILE_OPTION">Profile/Option</string>
    <string name="MESSAGE">Message</string>
    <string name="CONFIRM_EXIT">Do you want to exit podo?</string>
    <string name="CONFIRM_REPORT">Do you have something to tell \'podo\'? \n (bug report or suggestions)</string>
    <string name="WHAT_POINT">What is the point?</string>
    <string name="THINGS_YOU_CAN_DO_WITH_POINTS">Things you can do with points</string>
    <string name="UNLOCK_LESSONS">Lesson: Unlock Lessons</string>
    <string name="UNLOCK_READINGS">Reading: Unlock Readings</string>
    <string name="ASK_CORRECTION">Writing: Ask a Korean teacher for correction</string>
    <string name="HOW_TO_COLLECT_POINTS">How to collect points</string>
    <string name="WATCH_REWARD_ADS">Watch the Reward ads</string>
    <string name="ATTEND_FOR_7DAYS">Attend for 7 days in a row (see profile page)</string>
    <string name="PURCHASE">Purchase</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="SAVE">Save</string>
    <string name="CANCEL">Cancel</string>
    <string name="DAILY_MISSION">Daily Mission</string>
    <string name="MISSION_FIRST">Complete 5 general lessons</string>
    <string name="MISSION_SECOND">Complete 50 words review</string>
    <string name="MISSION_THIRD">Use podo for 20 minutes</string>
    <string name="GET_BONUS_POINTS">Get bonus points</string>
    <string name="DAILY_MISSION_INFO">How it works?</string>
    <string name="DAILY_MISSION_INFO_FIRST">You can get 3 points for every mission you complete.</string>
    <string name="DAILY_MISSION_INFO_SECOND">If you complete all missions, you will get an additional 5 points.</string>
    <string name="DAILY_MISSION_INFO_THIRD">Missions will reset every day.</string>
    <string name="GET_POINTS">You got the reward points!</string>
    <string name="POINTS">POINTS</string>
    <string name="GOT_IT">Got it!</string>
    <string name="CONFIRM_QUIT_LESSON">"Do you want to go back to main?\n(You can be rewarded points when you finish the lesson)"</string>
    <string name="CONFIRM_QUIT">"Do you want to go back to main?"</string>
    <string name="HANGUL">Hangul</string>
    <string name="CONSONANT">Consonant</string>
    <string name="VOWEL">Vowel</string>
    <string name="BATCHIM">Batchim</string>
    <string name="ASSEMBLY">Assembly</string>
    <string name="NUMBERS">Numbers</string>
    <string name="NUMBERS_INTRO_TITLE">How to say numbers in Korean</string>
    <string name="NUMBERS_INTRO">"Many Korean learners think Korean numbers are really difficult.
Because there are two systems of Korean numbers(Sino-Korean number / Native-Korean number) and you should use each number system depending on what the number is used for.
Therefore whenever students say numbers, they are confused about which system of number to use.

In general, each number system is used in the following situations:

1. Sino-Korean number: Number itself
2. Native-Korean number: Counting numbers (that's why we should use this with an 'unit noun' together)

But when you learn Korean numbers, you can see that this rule is not always correct.
(For example, why the hour is Native-Korean number but the minute is Sino-Korean number?)

So I suggest to students
'Just listen and follow the correct number a lot. Then you will feel something strange right before you try to use the wrong number.'

This lesson is designed to learn Sino-Korean number and Native-Korean number as well as to practice the numbers repeatedly in different situations.

Let's practice until '일시 오분' and '십살' seem strange!"</string>
    <string name="SINO_NUMBER">Sino-Korean number</string>
    <string name="NATIVE_NUMBER">Native-Korean number (1~99)</string>
    <string name="PRACTICE">Practice</string>
    <string name="SINO">sino</string>
    <string name="NATIVE">native</string>
    <string name="TIME">time</string>
    <string name="MONEY">money</string>
    <string name="DATE">date</string>
    <string name="AGE">age</string>
    <string name="IN_ORDER">In order</string>
    <string name="INTRO">Intro</string>
    <string name="HINT">Hint</string>
    <string name="SPECIAL_LESSON">Special lesson</string>
    <string name="INTERMEDIATE_LESSON">Intermediate lesson</string>
    <string name="COMPLETED">Completed</string>
    <string name="PRONUNCIATION">Pronunciation: </string>
    <string name="ANTONYMS">Antonyms: </string>
    <string name="SYNONYMS">Synonyms: </string>
    <string name="USES_IN_SENTENCE">Uses in sentence: </string>
    <string name="ADD_COLLECTION">Add Collection</string>
    <string name="RETURN">Return</string>
    <string name="PLAY">Play</string>
    <string name="STOP">Stop</string>
    <string name="FINISH">Finish</string>
    <string name="PLAY_AGAIN">Play again</string>
    <string name="SELECT_BOX">Select a box</string>
    <string name="CONGRATULATION">Congratulations!</string>
    <string name="GOOD_JOB">Good job! Let\'s keep going!</string>
    <string name="YOU_CAN_DO_BETTER">You can do better next time!</string>
    <string name="YOU_NEED">You need at least \'18/20\' to go to the next stage</string>
    <string name="TRY_AGAIN">Try again?</string>
    <string name="GET_POINT">Get the points</string>
    <string name="GO_TO_MAIN">Go to main</string>
    <string name="UNLOCK">Do you want to unlock this by using points?</string>
    <string name="UNLOCK_INACTIVE">You haven\'t completed the previous lesson yet. Do you want to use double points to unlock this lesson?</string>
    <string name="UNLOCK_FAILED">You don\'t have points enough.</string>
    <string name="UNLOCK_SUCCEEDED">Unlock succeeded</string>
    <string name="AUDIO_LOADING">Audio is loading now. Please try again.</string>
    <string name="FAIL_LOAD_AUDIO">Failed to load the audio. Please try again.</string>
    <string name="SELECT_ANSWER">Select your answer</string>
    <string name="LESSON_COMPLETE">Lesson Complete!</string>
    <string name="PLAY_ALL_AUDIO">Play all audio</string>
    <string name="CONJUGATE_CORRECTLY">Conjugate correctly</string>
    <string name="CHOOSE_BASE_FORM">Choose the right base form</string>
    <string name="CHOOSE_CONJUGATION">Choose the right conjugation</string>
    <string name="NEXT_LEVEL">Next Level</string>
    <string name="BEGINNER_LEVEL">Beginner Level</string>
    <string name="INTERMEDIATE_LEVEL">Intermediate Level</string>
    <string name="ADVANCED_LEVEL">Advanced Level</string>
    <string name="REVIEW">REVIEW</string>
    <string name="REWARDS">REWARDS</string>
    <string name="PLEASE_COMPLETE_PREVIOUS_LESSON">Please complete previous lesson</string>
    <string name="ALREADY_REWARDED">You have already been rewarded</string>
    <string name="PODO_LESSON_GOAL">podo lesson\'s goal</string>
    <string name="BEGINNER">Beginner</string>
    <string name="INTERMEDIATE">Intermediate (to be updated)</string>
    <string name="ADVANCED">Advanced (to be updated)</string>
    <string name="PODO_LESSON_GOAL_BEGINNER_1">
        "Learn minimum words and expressions that you mostly use everyday."</string>
    <string name="PODO_LESSON_GOAL_BEGINNER_2">
        "Don't waste your time and effort to learn something you don't use often."</string>
    <string name="PODO_LESSON_GOAL_INTERMEDIATE_1">
        "Focuses on practicing what you've learned so far."</string>
    <string name="PODO_LESSON_GOAL_INTERMEDIATE_2">
        "Stop learning new words and expressions for a while."</string>
    <string name="PODO_LESSON_GOAL_INTERMEDIATE_3">
        "Make sentences using only what you've learned in the beginner lessons."</string>
    <string name="PODO_LESSON_GOAL_ADVANCED_1">
        "It's time to upgrade your expressiveness by learning new(more advanced) words and expressions."</string>
    <string name="GET_MORE_READING">Get more readings</string>
    <string name="GO_BACK_MY_READING">Go back to my readings</string>
    <string name="NORMAL">Normal</string>
    <string name="SPEED">Speed x0.8</string>
    <string name="CORRECTION">Correction</string>
    <string name="WRITING_SAVED">Writing is saved</string>
    <string name="WRITING_SHORT">Writing should be at least 20 letters. </string>
    <string name="WRITING_DELETE">Are you sure want to delete this writing?</string>
    <string name="LETTERS">letters</string>
    <string name="WRITE_HERE">Write here</string>
    <string name="REVIEWED">Reviewed</string>
    <string name="REVIEWING">Reviewing</string>
    <string name="REQUEST_RESULT">Request is submitted. You\'ll get the feedback in 2days.</string>
    <string name="ORIGINAL_WRITING">Original Writing</string>
    <string name="CORRECTED_WRITING">Corrected Writing</string>
    <string name="REWRITE">Rewrite</string>
    <string name="COMMENT">Comment</string>
    <string name="STUDENT_FEEDBACK">Student\'s Feedback</string>
    <string name="GIVE_US_FEEDBACK">Give us your feedback</string>
    <string name="THANKYOU_FEEDBACK">Thank you for your feedback</string>
    <string name="SEND">Send</string>
    <string name="TIPS_CORRECTION_TITLE">Write your story</string>
    <string name="TIPS_CORRECTION">
        You can practice writing and request a correction from a native Korean teacher by using 1 point per 1 letter.
        Feedback will be provided in 100% Korean.
        (Inappropriate writing such as abusive language may be rejected)
    </string>
    <string name="ISSUE_TITLE">Learner\'s Issue</string>
    <string name="ISSUE_QUESTION">What is the most effective way to learn Korean?</string>
    <string name="ISSUE_ANSWER">Among a lot of students I taught, I asked the students who improved their Korean skills the fastest how to learn.</string>
    <string name="INTERVIEW_TITLE">Interview</string>
</resources>