<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/writingCorrectionLayout"
    android:background="@color/FOGGY"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/WHITE"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/WRITING"
        android:textColor="@color/BLACK"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@+id/btnGiveUsFeedback"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:padding="20dp"
            android:background="@drawable/bg_white_10_stroke_grey"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/ORIGINAL_WRITING"
                android:textSize="15dp" />
            <TextView
                android:id="@+id/writingOriginal"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:textColor="@color/BLACK"
                android:fontFamily="@font/nanumgothic_regular"
                android:lineSpacingExtra="7dp"
                android:padding="15dp"
                android:background="@drawable/bg_white_10_stroke_grey"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/CORRECTED_WRITING"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/writingCorrected"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:textColor="@color/BLACK"
                android:fontFamily="@font/nanumgothic_regular"
                android:lineSpacingExtra="7dp"
                android:padding="15dp"
                android:background="@drawable/bg_white_10_stroke_grey"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/COMMENT"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/feedbackTeacher"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:textColor="@color/BLACK"
                android:fontFamily="@font/nanumgothic_regular"
                android:lineSpacingExtra="7dp"
                android:padding="15dp"
                android:background="@drawable/bg_white_10_stroke_grey"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>