<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FOGGY">

    <TextView
        android:id="@+id/title"
        android:gravity="center"
        android:text="@string/HANGUL"
        android:textSize="18dp"
        android:textColor="@color/BLACK"
        android:background="@color/WHITE"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/btnBack"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/layoutConsonant"
                android:background="@drawable/bg_white_10"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/btnIntro"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:src="@drawable/hangul_menu_consonant"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:text="@string/CONSONANT"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/BLACK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutVowel"
                android:background="@drawable/bg_white_10"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/layoutConsonant"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:src="@drawable/hangul_menu_vowel"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:text="@string/VOWEL"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/BLACK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBatchim"
                android:background="@drawable/bg_white_10"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/layoutVowel"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:src="@drawable/hangul_menu_batchim"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:text="@string/BATCHIM"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/BLACK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAssembly"
                android:background="@drawable/bg_white_10"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/layoutBatchim"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:src="@drawable/hangul_assy"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:text="@string/ASSEMBLY"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/BLACK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>